# text_viewer_c

./: .gitignore  README.md  com.example.TextViewerC.json  meson.build
data/: com.example.TextViewerC.appdata.xml.in  com.example.TextViewerC.desktop.in  com.example.TextViewerC.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  text_viewer_c-application.c  text_viewer_c-application.h  text_viewer_c-window.blp  text_viewer_c-window.c  text_viewer_c-window.h  text_viewer_c.gresource.xml
src/gtk/: help-overlay.blp
